Improve C++/Java Aeron tests and coverage